--- a/assets/main.css
+++ b/assets/main.css
@@ -15,6 +15,10 @@ textview text {
     border: none;
 }
 
-#apps:hover {
-    background: #0af;
+#apps > button {
+    background: rgba(255, 255, 255, .4);
+}
+
+#apps > button:hover {
+    background: rgba(255, 255, 255, .6);
 }
