--- a/assets/main.css
+++ b/assets/main.css
@@ -1,6 +1,3 @@
-window {
-    background: rgba(0, 0, 0, .7);
-}
 
 label {
     color: #fff;
@@ -28,11 +25,33 @@ textview text {
 }
 
 #apps > button {
-    background: rgba(255, 255, 255, .1);
     min-width: 270px;
     transition: none;
+    border: none;
+}
+
+/* default colors */
+window {
+    background: alpha(#000, .7);
+}
+
+#apps > button {
+    background: alpha(#fff, .1);
 }
 
 #apps > button.active {
-    background: rgba(255, 255, 255, .3);
+    background: alpha(#fff, .3);
+}
+
+/* pywal colors */
+window.pywal {
+    background: alpha(@background, .7);
+}
+
+window.pywal #apps > button {
+    background: @background;
+}
+
+window.pywal #apps > button.active {
+    background: @color5;
 }
